[package]
name = "groundwork"
authors = ["Mikhail Modin <mikhailm1@gmail.com>"]
description = "A library that provides a status page for your Rust process"
version = "0.1.0"
homepage = "https://github.com/mikhail-m1/groundwork"
repository = "https://github.com/mikhail-m1/groundwork"
license = "GPL-3.0"
edition = "2024"

[dependencies]
poem = "3.1"
tokio = "1"
futures-util = "0.3"
thiserror = "2"
tracing-subscriber = "0.3.9"
log = "0.4"

hostname = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
circular-buffer = "1.0.0"
alloc-metrics = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"
either = "1.15"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14.10"
mach2 = "0.4"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
poem-openapi = { version = "5.1", features = ["swagger-ui"] }
poem-openapi-derive = { version = "5.1" }
